--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "pikachizer",
   "scripts": {
+    "build": "webpack"
   },
   "keywords": [
     "pikachizer",
@@ -19,5 +20,21 @@
   ],
   "author": "Leecason",
   "license": "MIT",
-  "homepage": "https://github.com/Leecason/pikachizer"
+  "homepage": "https://github.com/Leecason/pikachizer",
+  "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "autoprefixer": "^9.8.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
+    "cssnano": "^4.1.10",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
